# zte-f50

./: .gitignore  debug_login.py  pyproject.toml  zte_debug.py  zte_f50_monitor.py
